Changelog
=========


1.0a16
------

* Added div. templates and scrips from izug.theme to skins/izug_izug
  [eschmutz]

* Issue #1582 Wartung: das Hauptfenster laesst sich nicht mehr vergroessern
  Added  ui-icon-gripsmall-diagonal-se class to zugsprites.png
  https://extranet.4teamwork.ch/support/zug/maintlog/1582
  [eschmutz]
 
* Issue #1581 Termin Typ Sitzung: Traktandum bearbeiten
  Added new event for a-tags in zugCollapsible
  https://extranet.4teamwork.ch/support/zug/maintlog/1581
  [eschmutz]


1.0a15
------

* fixed menu position
  [fsprenger]

* fixed contentmenu position
  [fsprenger]

1.0a14
------

* Fixed broken css
  [eschmutz]

1.0a13
------

* Added z-index for greybox overlay
  [eschmutz]

1.0a12
------

* Added authenticator to delete_confirmation template
  [ttschanz]


1.0a11
------

* Updated CSS and zugsprite.png now contains all izug icons
  [ttschanz]

* Added content-wrapper to template
  [eschmutz]

* Added new css-class "content-wrapper" to add a gab between content and header
  [eschmutz]

* Better browserlayer/skinlayer handling in configure.zcml
  [eschmutz]

* Changed margin for div zug_byline
  [eschmutz]

* Changed layout for dashboard-portlets
  [eschmutz]

* Changed layout for function-/info-bar
  [eschmutz]

* Changed interface for folder_overview-view from Products.Archetypes.interfaces._base.IBaseObject to
  Products.Archetypes.interfaces.IBaseObject"
  [eschmutz]

* Added view folder_overview for izug-specific skin-layer to handle sprites in collections
  [eschmutz]

* Added izugspecifig contentmenu link-hover color
  [eschmutz]

* Added better comment for contentmenu-adapter-class
  [eschmutz]

* IIzugSpecific inherits now from IThemeSpecific and no longer from IDefaultPloneLayer and added zcml condition for ZugPersonalBar-Viewlet
  [eschmutz]

* Added adapter for plone.contentmenu to handle sprites in the contentmenu
  [eschmutz]

* Issue #1553 Behoerden - Anzeige Prozesslandkarte     